fixed more dark mode color scheme

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -1,7 +1,7 @@
 /*-- scss:defaults --*/
 // Base document colors
 $body-bg: #121212; // Slightly darker background for better contrast
-$body-color: #D3D3D3; // Lighter text color for better readability
+$body-color:  #BEBEBE; // Lighter text color for better readability
 $link-color: #1E90FF; // Bright blue for links
 $navbar-bg:  #434C56; //navbar // Keeping nav-bar consistent
 
